[gd_scene load_steps=13 format=3 uid="uid://byjobqop50cew"]

[ext_resource type="Script" path="res://scenes/entities/scout.gd" id="1_gmnaq"]
[ext_resource type="Texture2D" uid="uid://cgbghe6te32wb" path="res://assets/textures/icon.svg" id="2_btdtk"]
[ext_resource type="Script" path="res://movement_component.gd" id="3_dajo0"]
[ext_resource type="Script" path="res://hitbox.gd" id="4_kngsj"]
[ext_resource type="Texture2D" uid="uid://c8mp44f5i7gqq" path="res://assets/textures/pointer.png" id="5_hj4jv"]
[ext_resource type="Script" path="res://hurtbox.gd" id="6_wim8b"]
[ext_resource type="Script" path="res://attack_component.gd" id="7_1y3nw"]
[ext_resource type="Theme" uid="uid://djql0f4u6b3ic" path="res://assets/resources/ui/player_health.tres" id="8_c2exs"]

[sub_resource type="CircleShape2D" id="CircleShape2D_7knae"]
radius = 60.0

[sub_resource type="CircleShape2D" id="CircleShape2D_nla3r"]
radius = 60.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j3ln6"]
size = Vector2(128, 128)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tk88w"]
bg_color = Color(1, 0, 0, 1)

[node name="Scout" type="CharacterBody2D"]
motion_mode = 1
up_direction = Vector2(-1, 0)
script = ExtResource("1_gmnaq")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0, 1, 1, 1)
texture = ExtResource("2_btdtk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_7knae")

[node name="MovementComponent" type="Node" parent="."]
script = ExtResource("3_dajo0")

[node name="DashTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="Hitbox" type="Area2D" parent="."]
monitoring = false
script = ExtResource("4_kngsj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(120, 0)
shape = SubResource("CircleShape2D_nla3r")

[node name="Sprite2D" type="Sprite2D" parent="Hitbox"]
position = Vector2(121, -4)
scale = Vector2(0.337438, 0.337438)
texture = ExtResource("5_hj4jv")

[node name="Hurtbox" type="Area2D" parent="."]
script = ExtResource("6_wim8b")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource("RectangleShape2D_j3ln6")

[node name="AttackComponent" type="Node" parent="."]
script = ExtResource("7_1y3nw")

[node name="AttackTimer" type="Timer" parent="."]
one_shot = true

[node name="CanvasGroup" type="CanvasGroup" parent="."]

[node name="HealthBar" type="ProgressBar" parent="CanvasGroup"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = -934.0
offset_top = 470.0
offset_right = -461.0
offset_bottom = 519.0
grow_vertical = 0
theme = ExtResource("8_c2exs")
theme_override_styles/background = SubResource("StyleBoxFlat_tk88w")
max_value = 10.0
value = 10.0

[connection signal="timeout" from="DashTimer" to="MovementComponent" method="_on_dash_timer_timeout"]
[connection signal="body_entered" from="Hitbox" to="Hitbox" method="_on_body_entered"]
[connection signal="timeout" from="AttackTimer" to="AttackComponent" method="_on_attack_timer_timeout"]
